--- a/manifest.json
+++ b/manifest.json
@@ -11,8 +11,8 @@
         "default_popup": "popup.html"
     },
     "content_scripts": [{
-        "css": ["style_fb.css"],
-        "js": ["style_fb.js"],
+        "css": ["pink.css"],
+        "js": ["alert.js"],
         "matches": ["https://www.facebook.com/*"]
     }],
     "permissions": ["activeTab"]
